error.log
    Checking momemtum v0.1.0 (C:\Users\glauc\github\momemtum)
error[E0061]: this function takes 4 arguments but 5 arguments were supplied
  --> src\loader.rs:42:5
   |
42 |     bayer::demosaic::linear::run(
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
45 |         width,
   |         ----- unexpected argument #3 of type `usize`
46 |         height,
   |         ------
   |         |
   |         unexpected argument #4 of type `usize`
   |         argument #4 of type `&mut RasterMut<'_>` is missing
   |
note: types differ in mutability
  --> src\loader.rs:43:9
   |
43 |         &data_u16,
   |         ^^^^^^^^^
   = note: expected mutable reference `&mut dyn std::io::Read`
                      found reference `&Vec<u16>`
note: expected `BayerDepth`, found `&mut Vec<u16>`
  --> src\loader.rs:44:9
   |
44 |         &mut rgb_buf,
   |         ^^^^^^^^^^^^
   = note:           expected enum `BayerDepth`
           found mutable reference `&mut Vec<u16>`
note: function defined here
  --> C:\Users\glauc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bayer-0.1.5\src\demosaic\linear.rs:30:8
   |
30 | pub fn run(r: &mut Read,
   |        ^^^
help: did you mean
   |
42 -     bayer::demosaic::linear::run(
43 -         &data_u16,
44 -         &mut rgb_buf,
45 -         width,
46 -         height,
47 -         cfa,
48 -     );
42 +     bayer::demosaic::linear::run(/* &mut dyn std::io::Read */, /* BayerDepth */, cfa, /* &mut RasterMut<'_> */);
   |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `momemtum` (bin "momemtum") due to 1 previous error
